@@ -2,7 +2,7 @@
 /* set latest version */
 define("VERSION", "1.18");									//version changes if database structure changes
 /* set latest revision */
-define("REVISION", "026");									//revision always changes, verision only if database structure changes
+define("REVISION", "027");									//revision always changes, verision only if database structure changes
 /* set last possible upgrade */
 define("LAST_POSSIBLE", "1.1");								//minimum required version to be able to upgrade
 ?>
